--- a/.env
+++ b/.env
@@ -1,3 +1,11 @@
 VITE_GOOGLE_CLIENT_ID=your-google-client-id
 VITE_CALENDLY_CLIENT_ID=your-calendly-client-id
 VITE_REDIRECT_URI=http://localhost:5173/oauth/callback
+
+# Firebase Configuration
+VITE_FIREBASE_API_KEY="your-api-key"
+VITE_FIREBASE_AUTH_DOMAIN="your-auth-domain"
+VITE_FIREBASE_PROJECT_ID="your-project-id"
+VITE_FIREBASE_STORAGE_BUCKET="your-storage-bucket"
+VITE_FIREBASE_MESSAGING_SENDER_ID="your-messaging-sender-id"
+VITE_FIREBASE_APP_ID="your-app-id"
